<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智连</string>
    <string name="wifi_refresh">一键WiFi查询</string>
    
    <string name="wifi_without_password">免密码WiFi (%1$d)</string>
    <string name="wifi_need_password">需要密码WiFi (%1$d)</string>
    <string name="wifi_special">专属WiFi (%1$d)</string>
	
    <string name="wifi_disconnected">暂时没有连接到WiFi</string>
    <string name="wifi_connected">已连接</string>
    
    <string name="forget_password"><u>忘记密码?</u></string>
    <string name="login">登录</string>
    <string name="get_verification_code">获取验证码</string>  

    <string name="wifi_input_hint">请输入密码</string>
    <string name="wifi_share_or_not">是否共享wifi</string>
    
    <string name="confirm">确  认</string>
    
    <string name="discount">优惠</string>
    <string name="hire">招聘</string>
    
    <string name="distance">距离</string>
    <string name="category">类别</string>
    <string name="sort">排序</string>

    <string name="zoom">区域</string>
    <string name="pay">薪水</string>

    <string name="fetch_tips">获取数据失败</string>
    
    <string name="no_password">请输入密码</string>
    <string name="detail">详细信息</string>
    
    <string name="state_connecting">正在连接中...</string>
    <string name="state_connected">连接成功</string>
    
    <string name="wifi_not_enabled">请先开启wifi</string>
    
    <string name="fav_failed">收藏失败</string>
    <string name="fav_success">收藏成功</string>
    <string name="already_receive">已领取</string>
    
    <string name="connect_wifi_failed">连接WiFi失败，请确认密码是否正确</string>
    <string name="queding_xieyi">同意<u>WIFI用户协议</u></string>
    
    <string name="refreshing">正在刷新中...</string>
</resources>