<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg" >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="17sp"
        android:textColor="@color/color_app_black"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"/>

    <View
        android:id="@+id/dialog_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/dialog_title"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/wifi_count_line" />

    <EditText
        android:id="@+id/dialog_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:background="@drawable/password_edit_bg"
        android:hint="@string/wifi_input_hint"
        android:drawablePadding="4dp"
        android:textSize="15sp"
        android:textColor="@color/color_app_grey"
        android:drawableLeft="@drawable/input_password_icon"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@id/dialog_line"/>

    <CheckBox
        android:id="@+id/dialog_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:button="@drawable/checkbox_button"
        android:checked="true"
        android:textColor="@color/color_app_black"
        android:textSize="13sp"
        android:text="@string/wifi_share_or_not"
        android:layout_below="@id/dialog_input"
        android:layout_alignLeft="@id/dialog_input"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="21dp"/>
    
    <Button
        android:id="@+id/dialog_confirm"
        android:layout_height="45dp"
        android:layout_width="wrap_content"
        android:layout_below="@id/dialog_checkbox"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_button"
        android:text="@string/confirm"
        android:textSize="17sp"
        android:textColor="@color/color_white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"/>
    
</RelativeLayout>